--- a/styles.css
+++ b/styles.css
@@ -29,7 +29,8 @@ text-decoration: none;
 }
 
 li a:hover {
-background-color: #111;
+background-color: white;
+color: #000000;
 }
 
 .big-cont {
@@ -41,4 +42,5 @@ background-color: #111;
     width: 75%;
     background-color: #aa0000;
     border:2px solid #000000;
+    color:white;
 }
