--- a/styles.css
+++ b/styles.css
@@ -1,46 +1,50 @@
+body {
+    background: linear-gradient(to bottom, #800000 0%, #ff0000 100%);
+}
+
 .top-img {
-display: block;
-margin-left: auto;
-margin-right: auto;
-width: 40%;
-z-index: 0;
-}
-ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
-overflow: hidden;
-display: flex;
-justify-content: center;
-position: sticky;
-z-index: 1;
-top: 0;
-text-transform: uppercase;
-border-bottom: 2px solid black;
-background-color: #aa0000;
-}
-
-li a {
-display: block;
-color: white;
-text-align: center;
-padding: 14px 30px;
-text-decoration: none;
-}
-
-li a:hover {
-background-color: white;
-color: #000000;
-}
-
-.big-cont {
     display: block;
-    margin-top: 10px;
-    margin-bottom: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 75%;
+    width: 40%;
+    z-index: 0;
+    }
+    ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    position: sticky;
+    z-index: 1;
+    top: 0;
+    text-transform: uppercase;
+    border-bottom: 2px solid black;
     background-color: #aa0000;
-    border:2px solid #000000;
-    color:white;
-}
+    }
+    
+    li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 30px;
+    text-decoration: none;
+    }
+    
+    li a:hover {
+    background-color: white;
+    color: #000000;
+    }
+    
+    .big-cont {
+        display: block;
+        margin-top: 10px;
+        margin-bottom: 10px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 75%;
+        background-color: #aa0000;
+        border:2px solid #000000;
+        color:white;
+    }
