--- a/styles.css
+++ b/styles.css
@@ -2,14 +2,109 @@ body {
     background: linear-gradient(to bottom, #800000 0%, #ff0000 100%);
 }
 
-.top-img {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 40%;
-    z-index: 0;
-    }
-    ul {
+/*------------------------------------------------------------------------------------------------------------*/
+
+/*Slideshow Styling*/
+
+img {vertical-align: middle;}
+
+/* Slideshow container */
+.slideshow-container {
+  max-width: 80%;
+  position: relative;
+  margin-left: auto;
+  margin-right: auto;
+}
+/* Next & previous buttons */
+.prev, .next {
+  cursor:crosshair;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  user-select: none;
+}
+/* Position the "next button" to the right */
+.next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  background-color: rgba(0,0,0,0.8);
+}
+/* Caption text */
+.text {
+  color: #f2f2f2;
+  font-weight:lighter;
+  font-size: 30px;
+  padding: 8px 12px;
+  position: absolute;
+  bottom: 50%;
+  width: 100%;
+  text-align: center;
+  visibility: hidden;
+  opacity: 0;
+  transition: 0.6s ease;
+  text-shadow: 2px 2px 4px #000000;
+}
+.mySlides:hover .mySlides-img {
+  filter: brightness(75%);
+}
+.mySlides:hover .text {
+    visibility: visible;
+    opacity: 1; 
+}
+/* The dots/bullets/indicators */
+.dot {
+  cursor: pointer;
+  height: 5px;
+  width: 5px;
+  margin: 5 5px;
+  background-color: #bbb;
+  border-radius: 50%;
+  display:inline-block;
+  transition: background-color 0.6s ease;
+}
+.active, .dot:hover {
+  background-color: #717171;
+}
+
+/* Fading animation */ /*
+.fade {
+  animation-name: fade;
+  animation-duration: 1.0s;
+}
+/*
+.mySlides {
+  opacity: 0;
+  visibility: hidden; /* Prevent the slide from being clickable when hidden 
+  transition: opacity 1s ease-in-out;
+}
+.mySlides.fade {
+  opacity: 1;
+  visibility: visible;
+}
+*/
+
+@keyframes fade {
+  from {opacity: .5} 
+  to {opacity: 1}
+}
+/* On smaller screens, decrease text size */
+@media only screen and (max-width: 300px) {
+  .prev, .next,.text {font-size: 11px}
+}
+/*--------------------------------------------------------------------------------------------------------------*/
+
+    /*Navigation Bar styling*/
+    .navbar {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -23,20 +118,19 @@ body {
     border-bottom: 2px solid black;
     background-color: #aa0000;
     }
-    
-    li a {
+    .navbar li a {
     display: block;
     color: white;
     text-align: center;
     padding: 14px 30px;
     text-decoration: none;
     }
-    
-    li a:hover {
+    .navbar li a:hover {
     background-color: white;
     color: #000000;
     }
     
+    /*Main Page Area*/
     .big-cont {
         display: block;
         margin-top: 10px;
@@ -47,4 +141,17 @@ body {
         background-color: #aa0000;
         border:2px solid #000000;
         color:white;
+    }
+
+    /*Footer styling*/
+    .footer-emails {
+      list-style-type:none;
+      text-align: left;
+    }
+    .footer-emails li a {
+      text-decoration: none;
+      color:#717171;
+    }
+    .footer-emails li a:hover {
+      color:#ff0000;
     }
