--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,22 @@ body {
     background: linear-gradient(to bottom, #800000 0%, #ff0000 100%);
 }
 
+.top-bar {
+  width: 100%; 
+  height: 25px; 
+  display: flex; 
+  align-items: center; 
+  background-color:rgb(12, 25, 106); 
+  color:white
+}
+.top-bar > .top-bar-logo {
+  background-color: red; 
+  padding: 0 10px; 
+  height: 100%; 
+  display: flex; 
+  align-items: center;
+}
+
 /*------------------------------------------------------------------------------------------------------------*/
 
 /*Slideshow Styling*/
@@ -14,6 +30,7 @@ img {vertical-align: middle;}
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  z-index: 1;
 }
 /* Next & previous buttons */
 .prev, .next {
@@ -76,31 +93,6 @@ img {vertical-align: middle;}
   background-color: #717171;
 }
 
-/* Fading animation */ /*
-.fade {
-  animation-name: fade;
-  animation-duration: 1.0s;
-}
-/*
-.mySlides {
-  opacity: 0;
-  visibility: hidden; /* Prevent the slide from being clickable when hidden 
-  transition: opacity 1s ease-in-out;
-}
-.mySlides.fade {
-  opacity: 1;
-  visibility: visible;
-}
-*/
-
-@keyframes fade {
-  from {opacity: .5} 
-  to {opacity: 1}
-}
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
 /*--------------------------------------------------------------------------------------------------------------*/
 
     /*Navigation Bar styling*/
@@ -129,11 +121,11 @@ img {vertical-align: middle;}
     background-color: white;
     color: #000000;
     }
-    
+
     /*Main Page Area*/
     .big-cont {
         display: block;
-        margin-top: 10px;
+        margin-top: 0px;
         margin-bottom: 10px;
         margin-left: auto;
         margin-right: auto;
