--- a/styles.css
+++ b/styles.css
@@ -1,21 +1,140 @@
 body {
-    background: linear-gradient(to bottom, #800000 0%, #ff0000 100%);
+    background: linear-gradient(to bottom, #950606 0%, #F61313 100%);
 }
 
+/* Full-width input fields */
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+/* Add a background color when the inputs get focus */
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+.top-bar > .top-bar-sign {
+  background-color: #04AA6D;
+  color: white;
+  border: none;
+  padding: 0px 10px;
+  cursor: pointer;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  margin-left: auto;
+  border-style:none;
+}
+.top-bar > .top-bar-sign:hover {
+  opacity: 0.9;
+}
+.avatar {
+  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+/* Set a style for all buttons */
+.signupbtn, .cancelbtn {
+  background-color: #04AA6D;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  cursor: pointer;
+  width: 100%;
+  opacity: 0.9;
+}
+
+.signupbtn:hover, .cancelbtn:hover {
+  opacity:1;
+}
+
+/* Extra styles for the cancel button */
+.cancelbtn {
+  padding: 14px 20px;
+  background-color: #f44336;
+}
+
+/* Float cancel and signup buttons and add an equal width */
+.cancelbtn, .signupbtn {
+  float: left;
+  width: 50%;
+}
+
+/* Add padding to container elements */
+.sign-container {
+  padding: 16px;
+}
+
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 2; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgba(0,0,0,0.5);
+  padding-top: 50px;
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color:#000000;
+  color:white;
+  margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+  border: 1px solid red;
+  width: 50%; /* Could be more or less, depending on screen size */
+  font-weight: lighter;
+}
+
+/* Style the horizontal ruler */
+hr {
+  border: 1px solid red;
+  margin-bottom: 25px;
+}
+
+/* Clear floats */
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+
+/* Change styles for cancel button and signup button on extra small screens */
+@media screen and (max-width: 300px) {
+  .cancelbtn, .signupbtn {
+     width: 100%;
+  }
+}
+
+/*------------------------------------------------------------------------------------------------------------*/
 .top-bar {
   width: 100%; 
   height: 25px; 
   display: flex; 
   align-items: center; 
-  background-color:rgb(12, 25, 106); 
-  color:white
+  background-color: #00005a; 
+  color:white;
+  font-style:italic;
+  font-size: smaller;
 }
 .top-bar > .top-bar-logo {
-  background-color: red; 
+  background-color: #cd1c18; 
   padding: 0 10px; 
   height: 100%; 
   display: flex; 
   align-items: center;
+  font-weight: bold;
 }
 
 /*------------------------------------------------------------------------------------------------------------*/
@@ -30,7 +149,7 @@ img {vertical-align: middle;}
   position: relative;
   margin-left: auto;
   margin-right: auto;
-  z-index: 1;
+  z-index: 0;
 }
 /* Next & previous buttons */
 .prev, .next {
@@ -58,7 +177,7 @@ img {vertical-align: middle;}
 }
 /* Caption text */
 .text {
-  color: #f2f2f2;
+  color: white;
   font-weight:lighter;
   font-size: 30px;
   padding: 8px 12px;
@@ -108,7 +227,7 @@ img {vertical-align: middle;}
     top: 0;
     text-transform: uppercase;
     border-bottom: 2px solid black;
-    background-color: #aa0000;
+    background-color: #950606;
     }
     .navbar li a {
     display: block;
@@ -130,9 +249,10 @@ img {vertical-align: middle;}
         margin-left: auto;
         margin-right: auto;
         width: 75%;
-        background-color: #aa0000;
+        background-color: #950606;
         border:2px solid #000000;
         color:white;
+        z-index: 0;
     }
 
     /*Footer styling*/
@@ -142,8 +262,50 @@ img {vertical-align: middle;}
     }
     .footer-emails li a {
       text-decoration: none;
-      color:#717171;
+      color:gray;
     }
     .footer-emails li a:hover {
-      color:#ff0000;
+      color: red;
+    }
+
+    /*--------------------------------------*/
+
+    /*f40*/
+
+    .options {
+      margin-top: 5px;
+    }
+    #change-item {
+      background-color:grey;
+      color: black;
+      border: 1px solid black;
+      border-radius: 2px;
+      font-weight: lighter;
+    }
+    #purchase {
+      width: 100%; 
+      background-color: #cd1c18; 
+      color: white;
+      margin: 10px 0 2px 0;
+      border: 1px solid black;
+      border-radius: 2px;
+      font-weight: lighter;
+    }
+    #shortlist {
+      width: 100%; 
+      background-color: grey;
+      color: white;
+      margin: 2px 0 20px 0;
+      border: 1px solid black;
+      border-radius: 2px;
+      font-weight: lighter;
+    }
+    #purchase:hover, #shortlist:hover {
+      opacity: 0.9;
+    }
+    #myButton, #myButton2, #myButton3 {
+      height: 20px; 
+      width: 20px;
+      border: 1px solid black;
+      border-radius: 2px;
     }
