--- a/styles.css
+++ b/styles.css
@@ -149,6 +149,7 @@ img {vertical-align: middle;}
   position: relative;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 5px;
   z-index: 0;
 }
 /* Next & previous buttons */
