--- a/styles.css
+++ b/styles.css
@@ -136,6 +136,7 @@ height: 100%;
 padding: 0 10px;
 background-color: #cd1c18;
 font-weight: bold;
+text-shadow: 0 0 10px #fff;
 }
 
 /*------------------------------------------------------------------------------------------------------------*/
