--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,8 @@ body {
   background: linear-gradient(to bottom, #950606 0%, #F61313 100%);
 }
 
-/* Full-width input fields */
+
+/* Signup/Login input fields */
 input[type=text], input[type=password] {
 width: 100%;
 padding: 15px;
@@ -11,13 +12,12 @@ display: inline-block;
 background: #f1f1f1;
 border: none;
 }
-
-/* Add a background color when the inputs get focus */
+/* background color when the inputs get focus */
 input[type=text]:focus, input[type=password]:focus {
 background-color: #ddd;
 outline: none;
 }
-
+/*Green Signup button on top bar*/
 .top-bar > .top-bar-sign {
 display: flex;
 align-items: center;
@@ -33,7 +33,7 @@ cursor: pointer;
 .top-bar > .top-bar-sign:hover {
 opacity: 0.9;
 }
-
+/*Profile pic on Signup button*/
 .avatar {
 width: 20px;
 height: 20px;
@@ -52,23 +52,19 @@ border: none;
 cursor: pointer;
 opacity: 0.9;
 }
-
 .signupbtn:hover, .cancelbtn:hover {
 opacity: 1;
 }
-
 /* Extra styles for the cancel button */
 .cancelbtn {
 background-color: #f44336;
 padding: 14px 20px;
 }
-
 /* Float cancel and signup buttons and add an equal width */
 .cancelbtn, .signupbtn {
 float: left;
 width: 50%;
 }
-
 /* Add padding to container elements */
 .sign-container {
 padding: 16px;
@@ -76,18 +72,17 @@ padding: 16px;
 
 /* The Modal (background) */
 .modal {
-display: none; /* Hidden by default */
-position: fixed; /* Stay in place */
-z-index: 2; /* Sit on top */
+display: none; 
+position: fixed;
+z-index: 2; 
 top: 0;
 left: 0;
-width: 100%; /* Full width */
-height: 100%; /* Full height */
+width: 100%; 
+height: 100%;
 padding-top: 50px;
 overflow: auto; /* Enable scroll if needed */
 background-color: rgba(0,0,0,0.5);
 }
-
 /* Modal Content/Box */
 .modal-content {
 width: 50%; /* Could be more or less, depending on screen size */
@@ -97,13 +92,11 @@ color: white;
 border: 1px solid red;
 font-weight: lighter;
 }
-
-/* Style the horizontal ruler */
+/* horizontal ruler */
 hr {
 margin-bottom: 25px;
 border: 1px solid red;
 }
-
 /* Clear floats */
 .clearfix::after {
 content: "";
@@ -119,6 +112,8 @@ clear: both;
 }
 
 /*------------------------------------------------------------------------------------------------------------*/
+
+/*Sliding bar of text*/
 .top-bar {
 width: 100%;
 height: 25px;
@@ -129,6 +124,7 @@ color: white;
 font-style: italic;
 font-size: smaller;
 }
+/*FISK Logo left of Sliding bar*/
 .top-bar > .top-bar-logo {
 display: flex;
 align-items: center;
@@ -142,11 +138,9 @@ text-shadow: 0 0 10px #fff;
 /*------------------------------------------------------------------------------------------------------------*/
 
 /*Slideshow Styling*/
-
 img {
 vertical-align: middle;
 }
-
 /* Slideshow container */
 .slideshow-container {
 max-width: 80%;
@@ -168,7 +162,7 @@ cursor: crosshair;
 user-select: none;
 border-radius: 0 3px 3px 0;
 }
-/* Position the "next button" to the right */
+/* Position the arrow to the right */
 .next {
 right: 0;
 border-radius: 3px 0 0 3px;
@@ -192,20 +186,22 @@ opacity: 0;
 transition: 0.6s ease;
 text-shadow: 2px 2px 4px #000000;
 }
+/*Bottom white border of slideshow*/
 .mySlides-img {
 border-bottom: 5px ridge whitesmoke;
 }
 .mySlides:hover .mySlides-img {
 filter: brightness(75%);
 }
+/*Caption text appearing*/
 .mySlides:hover .text {
 visibility: visible;
 opacity: 1;
 }
 /* The dots/bullets/indicators */
-.dot-set {
+.dot-set { /*Set of three dots*/
 position: absolute;
-bottom: 10px; /* Adjust the value to position the dots vertically */
+bottom: 10px;
 left: 50%;
 transform: translateX(-50%);
 z-index: 10;
@@ -280,8 +276,7 @@ color: red;
 /*--------------------------------------*/
 
 /*f40*/
-
-.options {
+.options { /*Purchase, Shortlist, Change Currency, Change colour buttons*/
 margin-top: 5px;
 }
 #change-item {
@@ -312,7 +307,7 @@ font-weight: lighter;
 #purchase:hover, #shortlist:hover {
 opacity: 0.9;
 }
-#myButton, #myButton2, #myButton3 {
+#myButton, #myButton2, #myButton3 { /*Change Colour of car buttons*/
 height: 20px;
 width: 20px;
 border: 1px solid black;
