--- a/styles.css
+++ b/styles.css
@@ -313,3 +313,40 @@ width: 20px;
 border: 1px solid black;
 border-radius: 2px;
 }
+.filt {
+  position: absolute;
+  top: 40px; 
+  left: 10px;
+  width: 250px;
+  padding: 15px;
+  background-color: rgb(0, 0, 0); 
+  border: 1px solid red; 
+  z-index: 1000; 
+}
+
+.filt label {
+  display: block;
+  margin-bottom: 5px;
+  color: #fff;
+}
+
+.filt input {
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border: 1px solid #000; 
+}
+
+.filt button {
+  width: 100%;
+  padding: 10px;
+  background-color: #04AA6D;
+  color: white;
+  border: 1px solid #000; 
+  cursor: pointer;
+}
+
+.filt button:hover {
+  background-color: #04AA6D;
+}
+
